Updating gradle, libs version, and dokka

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,11 @@ org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryEr
 org.gradle.parallel=true
 org.gradle.caching=true
 
+#dokka v2
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
+
 # Kotlin Native
-kotlin.native.binary.memoryModel=experimental
 kotlin.native.ignoreDisabledTargets=true
 
 # For MPP publications
