--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
 kotlin = "2.1.20"
 dokka = "2.0.0"
-dokka-javadoc = "2.0.0"
 kotlinx-io = "0.7.0"
 jnr-constants = "0.10.4"
 jnr-ffi = "2.2.17"
+maven-publish = "0.30.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test" }
@@ -15,4 +15,4 @@ jnr-ffi = { module = "com.github.jnr:jnr-ffi", version.ref = "jnr-ffi" }
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
-dokka-javadoc = { id = "org.jetbrains.dokka-javadoc", version.ref = "dokka-javadoc" }
+maven-publish = { id = "com.vanniktech.maven.publish", version.ref = "maven-publish" }
