--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,15 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
 
+      - name: Setup Emscripten (for wasmJs target)
+        uses: mymindstorm/setup-emsdk@v14
+        with:
+          version: '3.1.51'
+          actions-cache-folder: 'emsdk-cache'
+
+      - name: Set EMCC_PATH environment variable
+        run: echo "EMCC_PATH=$EMSDK/upstream/emscripten/emcc" >> $GITHUB_ENV
+
       - name: Cache Kotlin Native compiler and Gradle dependencies
         uses: actions/cache@v4
         with:
